address minor comments